--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8080
 #spring.profiles.active=prod
+#logging.level.pers.huidong.springbootstudy= trace
+#logging.file.path=
+#logging.file.name=springboot.log
