--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=80
+#server.servlet.context-path=/huidong
 #spring.profiles.active=prod
 #logging.level.pers.huidong.springbootstudy= trace
 #logging.file.path=
