--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.port=80
 #logging.level.pers.huidong.springbootstudy= trace
 #logging.file.path=
 #logging.file.name=springboot.log
+
+
+spring.messages.basename=i18n/login
