--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,7 @@ server.port=80
 #logging.file.path=
 #logging.file.name=springboot.log
 
-
+#\u8BBE\u7F6E\u56FD\u9645\u5316\u6587\u4EF6
 spring.messages.basename=i18n/login
+#\u53D6\u6D88\u6A21\u677F\u7F13\u5B58
+spring.thymeleaf.cache=false
