--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=80
-#server.servlet.context-path=/crud
+server.servlet.context-path=/huidong
 #spring.profiles.active=prod
 #logging.level.pers.huidong.springbootstudy= trace
 #logging.file.path=
@@ -9,3 +9,5 @@ server.port=80
 spring.messages.basename=i18n/login
 #\u53D6\u6D88\u6A21\u677F\u7F13\u5B58
 spring.thymeleaf.cache=false
+#\u8BBE\u7F6E\u65E5\u671F\u6570\u636E\u683C\u5F0F
+spring.mvc.format.date=yyyy-MM-dd
