--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,21 @@
-
+spring:
+  datasource:
+    # 配置数据源类型
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/db_sb?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+    username: huidong
+    password: huidong
+    # 初始化，最小，最大连接数
+    initialSize: 1
+    minidle: 1
+    maxActive: 18
+    # 获取数据库连接等待的超时时间
+    maxWait: 60000
+#     配置多久进行一次检测，检测需要关闭的空闲连接 单位毫秒
+    timeBetweenEvictionRunsMillis: 60000
+    validationQuery: SELECT 1 FROM dual
+    # 配置监控统计拦截的filters,去掉后，监控界面的sql无法统计
 person:
   lastName: huidong
   age: 18
