--- a/pom.xml
+++ b/pom.xml
@@ -57,21 +57,27 @@
             <artifactId>bootstrap</artifactId>
             <version>4.5.0</version>
         </dependency>
-<!--        导入jdbc\-->
+        <!--        导入jdbc\-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
-<!--        导入mysql驱动-->
+        <!--        导入mysql驱动-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
-<!--        导入druid-->
+        <!--        导入druid-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.10</version>
+        </dependency>
+<!--        导入mybatis-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.0</version>
         </dependency>
     </dependencies>
 
