Commit 9-4 : 整合mybatis,配置文件方式

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,3 +65,6 @@ person:
   dog:
     name: 小狗
     age: 10
+mybatis:
+  config-location: classpath:mybatis/mybatis-config.xml
+  mapper-locations: classpath:mybatis/mapper/*.xml
